force-app/main/default/objects/Sensitive_Field_Rule__mdt/Sensitive_Field_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Marks Health Cloud-sensitive objects and fields for security review.</description>
    <label>Sensitive Field Rule</label>
    <pluralLabel>Sensitive Field Rules</pluralLabel>
</CustomObject>