force-app/main/default/objects/Sensitive_Field_Rule__mdt/fields/Compliance_Note__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Note__c</fullName>
    <label>Compliance Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>