force-app/main/default/objects/Sensitive_Field_Rule__mdt/fields/Sensitivity_Level__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity_Level__c</fullName>
    <label>Sensitivity Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>